필요 페이지

--- a/myproject/templates/main.html
+++ b/myproject/templates/main.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Page</title>
+  <title>Dialing</title>
   <link rel="stylesheet" href="../static/css/common.css">
   <link rel="stylesheet" href="../static/css/main.css">
 
@@ -42,8 +42,8 @@
 
     <!-- Service area -->
     <div class="service-area">
-      <button class="service-button">Service 1</button>
-      <button class="service-button">Service 2</button>
+      <button class="service-button">음성서비스</button>
+      <button class="service-button">글자서비스</button>
     </div>
   </div>
 </body>
