--- a/myproject/templates/main.html
+++ b/myproject/templates/main.html
@@ -1,3 +1,4 @@
+{% load static %} {% load bootstrap4 %}
 <!DOCTYPE html>
 <html lang="Ko">
 
@@ -52,6 +53,9 @@
   document.getElementById('voice_service').addEventListener('click', function() {
       window.location.href = "{% url 'voice_page' %}";  // 'your_view_name'은 대상 뷰의 이름
   });
+  document.getElementById('text_service').addEventListener('click', function() {
+      window.location.href = "{% url 'hello_world' %}";  // 'your_view_name'은 대상 뷰의 이름
+  });  
 </script>
 
 </html>
