--- a/myproject/templates/main.html
+++ b/myproject/templates/main.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dialing</title>
-  <link rel="stylesheet" href="../static/css/common.css">
-  <link rel="stylesheet" href="../static/css/main.css">
+  <link rel="stylesheet" href="{% static 'css/common.css' %}">
+  <link rel="stylesheet" href="{% static 'css/main.css' %}">
 </head>
 
 <body>
@@ -50,17 +50,18 @@
 
 <script>
   // 버튼이 클릭되면 특정 URL로 리다이렉션하는 함수
-  /* 이진님 코드
   document.getElementById('voice_service').addEventListener('click', function() {
       window.location.href = "{% url 'voice_page' %}";  // 'your_view_name'은 대상 뷰의 이름
   });
   document.getElementById('text_service').addEventListener('click', function() {
       window.location.href = "{% url 'hello_world' %}";  // 'your_view_name'은 대상 뷰의 이름
   }); 
-  */
+  
+  /*
   document.getElementById('voice_service').addEventListener('click', function () {
     window.location.href = 'speech.html';
   });
+  */
 </script>
 
 </html>
