--- a/myproject/templates/speech.html
+++ b/myproject/templates/speech.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <title>speech-service</title>
-    <link rel="stylesheet" href="../static/css/speech.css">
+    <link rel="stylesheet" href="{% static 'css/speech.css' %}">     
 
 
 
