--- a/myproject/templates/speechOutput.html
+++ b/myproject/templates/speechOutput.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <title>speech-service</title>
-    <link rel="stylesheet" href="../static/css/speechOutput.css">
+    <link rel="stylesheet" href="{% static 'css/speechOut.css' %}">     
 
 
 
