--- a/myproject/templates/dialect.html
+++ b/myproject/templates/dialect.html
@@ -1,12 +1,14 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <title>언어 선택</title>
-    <link rel="stylesheet" href="../static/css/dialect.css">
-    <link rel="stylesheet" href="../static/css/common.css">
-    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="{% static 'css/common.css' %}">
+    <link rel="stylesheet" href="{% static 'css/dialect.css' %}">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
 
 </head>
