--- a/myproject/templates/voice.html
+++ b/myproject/templates/voice.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dialingo</title>
     <link rel="stylesheet" href="{% static 'css/common.css' %}">
-    <link rel="stylesheet" href="{% static 'css/common.css' %}">     
+    <link rel="stylesheet" href="{% static 'css/speech.css' %}">     
 </head>
 
 <body>
