--- a/myproject/static/css/dialect.css
+++ b/myproject/static/css/dialect.css
@@ -1,4 +1,5 @@
 /* Main */
+
 body {
     margin: 0;
     padding: 0;
@@ -97,7 +98,7 @@ body {
 .language-area {
     position: relative;
     width: calc(100% - 40px); /* 변경된 너비 */
-    background-color: #fff;
+    /* background-color: #fff; */
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
