--- a/myproject/templates/main.html
+++ b/myproject/templates/main.html
@@ -37,7 +37,7 @@
 
     <!-- Image area -->
     <div class="image-area">
-      <img src="your-image-url.jpg" alt="Your Image">
+      <img src="{% static 'src/backgorund1.png' %}" alt="Your Image">
     </div>
 
     <!-- Service area -->
