--- a/myproject/static/css/main.css
+++ b/myproject/static/css/main.css
@@ -1,93 +1,107 @@
+/* Main */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  overflow-x: hidden;
+  /* 추가: 가로 스크롤 제거 */
+}
 
-    /* Main */
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-      }
-  
-      .main-container {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        /* 위의 transform 속성은 container의 너비와 높이를 고려하여 중앙 정렬을 수행합니다. */
-        width: 360px;
-        height: 740px;
-        background: #FFFFFF;
-      }
-  
-  
-      /* Navigation */
-      .navigation {
-        position: absolute;
-        width: 100%;
-        height: 50px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background: #FFFFFF;
-        border-bottom: 1px solid #000000;
-      }
-  
-      /* Menu button */
-      .menu-button {
-        cursor: pointer;
-        margin-left: 10px;
-      }
-  
-      /* Language button */
-      .language-button {
-        cursor: pointer;
-        margin-right: 10px;
-      }
-  
-      /* Dropdown menu */
-      .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 100px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-      }
-  
-      /* Show dropdown content on hover */
-      .dropdown:hover .dropdown-content {
-        display: block;
-      }
-  
-      /* Image area */
-      .image-area {
-        position: absolute;
-        width: 100%;
-        top: 60px;
-        /* Adjust as needed */
-        text-align: center;
-      }
-  
-      .service-area {
-        position: absolute;
-        bottom: 0;
-        text-align: center;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 80px; /* 필요한 만큼 조정하세요 */
-      }
-      
-      .service-button {
-        display: inline-block;
-        margin: 5px 0; /* 버튼 사이의 간격을 조정하세요 */
-        padding: 8px 20px;
-        background-color: #0693F1;
-        color: #FFFFFF;
-        font-weight: 500;
-        font-size: 16px;
-        border-radius: 20px;
-        cursor: pointer;
-        width: 300px;
-      }
-      
+.main-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* 위의 transform 속성은 container의 너비와 높이를 고려하여 중앙 정렬을 수행합니다. */
+  width: 360px;
+  height: 740px;
+  background: #FFFFFF;
+}
+
+
+/* Navigation */
+.navigation {
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #FFFFFF;
+  border-bottom: 1px solid #000000;
+}
+
+/* Menu button */
+.menu-button {
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+/* Language button */
+.language-button {
+  cursor: pointer;
+  margin-right: 10px;
+}
+
+/* Dropdown menu */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+/* Show dropdown content on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Image area */
+.image-area {
+  position: absolute;
+  width: 100%;
+  top: 60px;
+  /* Adjust as needed */
+  text-align: center;
+  max-height: calc(100vh - 200px);
+  /* 이미지가 벗어나지 않도록 최대 높이 설정 */
+  overflow: hidden;
+  /* 추가: 넘치는 이미지 숨기기 */
+}
+
+.image-area img {
+  max-width: 100%;
+  max-height: 100%;
+  /* 이미지 최대 높이 설정 */
+  height: auto;
+}
+
+.service-area {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 100px;
+  /* 필요한 만큼 조정하세요 */
+}
+
+.service-button {
+  display: inline-block;
+  border: none;
+  margin: 10px 0;
+  /* 버튼 사이의 간격을 조정하세요 */
+  padding: 8px 20px;
+  background-color: #0693F1;
+  color: #FFFFFF;
+  font-weight: 500;
+  font-size: 16px;
+  border-radius: 20px;
+  cursor: pointer;
+  width: 300px;
+}
