--- a/myproject/templates/start.html
+++ b/myproject/templates/start.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../static/css/start.css">
 </head>
 <body>
-  <form action="{% url 'dialect_page' %}">
+  <form action="{% url 'main_page' %}">
     <div class="container">
       <div class="logo"></div> <!-- 로고 이미지는 CSS에서 배경 이미지로 설정됨 -->
       <div class="content">
