--- a/myproject/static/css/main.css
+++ b/myproject/static/css/main.css
@@ -3,8 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  overflow-x: hidden;
-  /* 추가: 가로 스크롤 제거 */
+  overflow-x: hidden; /* 가로 스크롤 제거 */
 }
 
 .main-container {
@@ -12,12 +11,10 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* 위의 transform 속성은 container의 너비와 높이를 고려하여 중앙 정렬을 수행합니다. */
   width: 360px;
   height: 740px;
   background: #FFFFFF;
 }
-
 
 /* Navigation */
 .navigation {
@@ -53,7 +50,6 @@ body {
   z-index: 1;
 }
 
-/* Show dropdown content on hover */
 .dropdown:hover .dropdown-content {
   display: block;
 }
@@ -63,21 +59,21 @@ body {
   position: absolute;
   width: 100%;
   top: 60px;
-  /* Adjust as needed */
   text-align: center;
   max-height: calc(100vh - 200px);
-  /* 이미지가 벗어나지 않도록 최대 높이 설정 */
   overflow: hidden;
-  /* 추가: 넘치는 이미지 숨기기 */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .image-area img {
   max-width: 100%;
   max-height: 100%;
-  /* 이미지 최대 높이 설정 */
   height: auto;
 }
 
+/* Service area */
 .service-area {
   position: absolute;
   bottom: 0;
@@ -88,14 +84,12 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: 100px;
-  /* 필요한 만큼 조정하세요 */
 }
 
 .service-button {
   display: inline-block;
   border: none;
   margin: 10px 0;
-  /* 버튼 사이의 간격을 조정하세요 */
   padding: 8px 20px;
   background-color: #0693F1;
   color: #FFFFFF;
@@ -104,4 +98,21 @@ body {
   border-radius: 20px;
   cursor: pointer;
   width: 300px;
+}
+
+/* Select area */
+.select-area {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.select-area img {
+  max-width: 20px;
+  margin: 0 5px;
 }
