--- a/myproject/static/css/voice.css
+++ b/myproject/static/css/voice.css
@@ -85,8 +85,10 @@ body {
 }
 
 .mike_img img {
-    width: 50px;
-    height: 50px;
+    /* width: 50px;
+    height: 50px; */
+    max-width: 100%;
+    height: auto;
 }
 
 /* Input text area */
