--- a/myproject/static/css/voice.css
+++ b/myproject/static/css/voice.css
@@ -20,44 +20,31 @@ body {
 
 /* Navigation */
 .navigation {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     background: #FFFFFF;
     border-bottom: 1px solid #000000;
-}
-
-/* Menu button */
-.menu-button {
-    cursor: pointer;
-    margin-left: 10px;
-}
-
-/* Language button */
-.language-button {
-    cursor: pointer;
-    margin-right: 10px;
-}
-
-/* Dropdown menu */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 100px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-/* Show dropdown content on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
+    z-index: 1000; /* 다른 요소 위에 놓이도록 설정 */
+  }
+  
+  /* Logo */
+  .logo-container {
+    width: 100%;
+    max-width: calc(100% - 20px); /* 최대 너비 설정 */
+    padding: 0 10px; /* 네비게이션과 로고 간격 조정 */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden; /* 넘치는 부분 숨김 처리 */
+  }
+  
+  .logo-container img {
+    max-height: 50px; /* 로고 이미지의 최대 너비 설정 */
+    height: auto;
+  }
+  
 
 .close-button {
     position: absolute;
