--- a/myproject/static/css/voiceOutput.css
+++ b/myproject/static/css/voiceOutput.css
@@ -18,45 +18,31 @@ body {
     justify-content: center; /* 가로 가운데 정렬 */
 }
 
-/* Navigation */
-.navigation {
-    position: absolute;
+  /* Navigation */
+  .navigation {
+    position: fixed;
     top: 0;
     width: 100%;
     height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     background: #FFFFFF;
     border-bottom: 1px solid #000000;
-}
-
-/* Menu button */
-.menu-button {
-    cursor: pointer;
-    margin-left: 10px;
-}
-
-/* Language button */
-.language-button {
-    cursor: pointer;
-    margin-right: 10px;
-}
-
-/* Dropdown menu */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 100px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-/* Show dropdown content on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
+    z-index: 1000; /* 다른 요소 위에 놓이도록 설정 */
+  }
+/* Logo */
+.logo-container {
+    width: 100%;
+    height: 50px; /* 로고 컨테이너의 높이 설정 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  
+  .logo-container img {
+    max-height: 100%; /* 로고 이미지의 최대 높이를 로고 컨테이너의 높이에 맞춤 */
+    width: auto;
+    height: auto;
+  }
 
 .close-button {
     position: absolute;
@@ -73,8 +59,6 @@ body {
     width: 20px;
     height: 20px;
 }
-
-
 
 .close-button img {
     width: 20px;
