--- a/myproject/templates/start.html
+++ b/myproject/templates/start.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dialingo</title>
-  <link rel="stylesheet" href="../static/css/common.css">
-  <link rel="stylesheet" href="../static/css/start.css">
+  <link rel="stylesheet" href="{% static 'css/common.css' %}">
+  <link rel="stylesheet" href="{% static 'css/start.css' %}">
+  <!-- <link rel="stylesheet" href="../static/css/common.css"> -->
+  <!-- <link rel="stylesheet" href="../static/css/start.css"> -->
 </head>
 <body>
   <form action="{% url 'main_page' %}">
