--- a/myproject/templates/voiceOutput.html
+++ b/myproject/templates/voiceOutput.html
@@ -29,6 +29,13 @@
             <p>{{ translation_sentences }}</p>
         </div>
 
+
+        <!-- 화살표 이미지 추가 -->
+        <div class="arrow-image">
+            <img src="{% static 'src/arrow.png' %}" alt="Arrow Image" width="30" height="auto">
+        </div>
+
+
         <div class="input_text" id="outputText">
             <p class="input-label">최종 번역 결과:</p>
         </div>
