--- a/myproject/static/css/voiceOutput.css
+++ b/myproject/static/css/voiceOutput.css
@@ -97,14 +97,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px; /* 필요에 따라 조정 가능한 여백 */
+    padding: 10px;
+    margin-top: 10px;
 }
 
 .arrow-image img {
-    width: 50px; /* 이미지 크기 조정 */
-    height: 50px;
+    max-width: 100%; /* 이미지가 부모 요소를 벗어나지 않도록 설정 */
+    height: auto;
 }
-
 
 /* Footer */
 .footer {
