--- a/myproject/templates/voice.html
+++ b/myproject/templates/voice.html
@@ -109,11 +109,18 @@ document.getElementById('replayButton').addEventListener('click', function () {
     window.location.href = "{% url 'voice_page' %}";  // 'your_view_name'은 대상 뷰의 이름
 });
 
-    /* 메인 페이지로 이동 */
-    document.getElementById('closeButton').addEventListener('click', function () {
-    
-    window.location.href = "{% url 'main_page' %}";  // 'your_view_name'은 대상 뷰의 이름
+/* 메인 페이지로 이동 */
+document.getElementById('closeButton').addEventListener('click', function () {
+
+window.location.href = "{% url 'main_page' %}";  // 'your_view_name'은 대상 뷰의 이름
 });
+
+//상단 로고 클릭하면 start페이지로
+document.getElementById('logoButton').addEventListener('click', function() {
+window.location.href = "{% url 'start_page' %}"; // 'your_view_name'은 대상 뷰의 이름
+});
+
+
 </script>
 
 </html>
