--- a/myproject/templates/main.html
+++ b/myproject/templates/main.html
@@ -30,8 +30,8 @@
     <div class="select-area">
       <select class="select-button" id="from-select">
         <!-- Dropdown menu items for 'from' selection -->
-        <option value="" selected disabled hidden>방언 지역 선택</option>
-        <option value="option1">제주도</option>
+        <!--<option value="" selected disabled hidden>방언 지역 선택</option> -->
+        <option value="option1" selected>제주도</option>
         <option value="option2">경상도</option>
         <option value="option3">강원도</option>
         <option value="option4">전라도</option>
@@ -42,9 +42,9 @@
 
       <select class="select-button" id="to-select">
         <!-- Dropdown menu items for 'to' selection -->
-        <option value="" selected disabled hidden>번역 언어 선택</option>
+       <!--<option value="" selected disabled hidden>번역 언어 선택</option>--> 
         <option value="option1" disabled>베트남어</option>
-        <option value="option2">영어</option>
+        <option value="option2" selected>영어</option>
         <option value="option3" disabled>일본어</option>
         <option value="option4" disabled>중국어</option>
         <option value="option5" disabled>캄보디아어</option>
